[package]
name = "f76itemstuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
umya-spreadsheet = "0.7.2"
serde = { version = "1.0.139", features = ["derive"] }
egui = "0.18.1"
eframe = "0.18.0"
confy = "0.4.0"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"